--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -3,20 +3,29 @@ name: Moon Data Parser and Processor
 # CI/CD workflow for daily updates of https://rumiantsevaa.github.io/lunar_majesty/ data on GitHub Pages 
 
 # GitHub Actions runner (works as master node) scrapes raw moon data - parse_data.py
+
 # (Acts as GA worker that controls the how GA enviroment gets the data, how it's parsed and saves it in GA workflow artifacts.) 
 
 # Raw data is sent to PythonAnywhere (PA) node that acts as enviroment for data processing - bot_launcher.py 
+
 # (Acts as GA worker that controls the how PA enviroment gets the data, how it's processed and saves it in GA workflow artifacts.) 
 
 # Future implementation: GA worker commits processed data to repo (triggering Pages rebuild daily)
 
 # This workflow performs up to 3 sequential attempts of parsing and processing moon data.
-# Each attempt is a separate job (attempt1, attempt2, attempt3) linked via `needs` and `if`.
+
+# Each attempt is a separate job (attempt1, attempt2, attempt3) linked via needs and if.
+
 # Logic: attempt2 runs only if attempt1 fails (result == 'failure'), attempt3 runs only if attempt2 fails.
+
 # The success/failure of an attempt is determined by the "Verify processed file" step:
+
 #   - If moon_data_processed.json is found → the job exits successfully (exit code 0).
+
 #   - If the file is missing → the job exits with an error (exit 1), triggering the next attempt.
+
 # This ensures that if the first or second attempt succeeds, subsequent attempts are skipped
+
 # and the workflow finishes early.
 
 on:
@@ -42,22 +51,59 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Make ChromeDriver executable and add to PATH
+      - name: Verify and setup ChromeDriver
         run: |
+          # Проверяем наличие файла
+          if [ ! -f "./matching_chrome_driver/chromedriver" ]; then
+            echo "❌ ChromeDriver not found at ./matching_chrome_driver/chromedriver"
+            exit 1
+          fi
+          
+          # Делаем исполняемым
           chmod +x ./matching_chrome_driver/chromedriver
-          echo "ChromeDriver version:"
+          
+          # Проверяем версию
+          echo "📋 ChromeDriver info:"
+          ls -la ./matching_chrome_driver/chromedriver
           ./matching_chrome_driver/chromedriver --version
+          
+          # Проверяем версию Chrome в системе
+          echo "📋 System Chrome version:"
+          google-chrome --version || echo "Chrome not found in PATH"
+          
+          # Принудительно очищаем кеш undetected_chromedriver
+          echo "🧹 Clearing undetected_chromedriver cache..."
+          rm -rf ~/.undetected_chromedriver/ || true
+          rm -rf /tmp/.com.google.Chrome* || true
+          
+          # Убеждаемся что используем наш драйвер
+          export PATH="$(pwd)/matching_chrome_driver:$PATH"
+          which chromedriver
+          chromedriver --version
           echo "✅ ChromeDriver configured and version verified"
 
       - name: Run and save parser output
+        env:
+          # Принудительно используем наш ChromeDriver
+          CHROMEDRIVER_PATH: "./matching_chrome_driver/chromedriver"
         run: |
+          echo "🚀 Starting parser with ChromeDriver: $CHROMEDRIVER_PATH"
           python parse_data.py > moon_data.json
           echo "✅ Raw moon data collected in moon_data.json"
           ls -la moon_data.json
+          # Проверим содержимое
+          head -c 200 moon_data.json
 
       - name: Read JSON to env var
         id: json
         run: |
+          # Проверим валидность JSON
+          if ! python3 -c "import json; json.load(open('moon_data.json'))" 2>/dev/null; then
+            echo "❌ Invalid JSON in moon_data.json"
+            cat moon_data.json
+            exit 1
+          fi
+          
           CONTENT=$(cat moon_data.json | python3 -c 'import json,sys; print(json.dumps(json.load(sys.stdin)))')
           echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
           echo "✅ JSON data loaded into environment variable"
@@ -67,15 +113,25 @@ jobs:
           PA_USERNAME: ${{ secrets.PA_USERNAME }}
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ env.MOON_JSON }}
+          CHROMEDRIVER_PATH: "./matching_chrome_driver/chromedriver"
         run: |
           echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
+          echo "📋 Using ChromeDriver: $CHROMEDRIVER_PATH"
           python bot_launcher.py
 
       - name: Verify processed file
         run: |
           if [ -f "moon_data_processed.json" ]; then
             echo "✅ The processed file was created successfully!"
-            echo "📊 File size: $(wc -c < moon_data_processed.json) byte"
+            echo "📊 File size: $(wc -c < moon_data_processed.json) bytes"
+            
+            # Проверим валидность JSON
+            if python3 -c "import json; json.load(open('moon_data_processed.json'))" 2>/dev/null; then
+              echo "✅ JSON is valid"
+            else
+              echo "❌ Invalid JSON in processed file"
+              exit 1
+            fi
             echo "📝 First 200 characters:"
             head -c 200 moon_data_processed.json
             echo ""
@@ -89,7 +145,7 @@ jobs:
       - name: Upload processed result
         uses: actions/upload-artifact@v4
         with:
-          name: moon-data-processed
+          name: moon-data-processed-attempt3
           path: |
             moon_data.json
             moon_data_processed.json
@@ -98,7 +154,40 @@ jobs:
       - name: Show final status
         if: always()
         run: |
-          echo "📋 Final status:"
+          echo "📋 Final status for attempt 3:"
+          ls -la *.json || echo "No JSON files"
+          if [ -f "moon_data_processed.json" ]; then
+            echo "✅ Processing completed successfully!"
+          else
+            echo "⚠️ The processed file was not created."
+          fi in processed file"
+              head -c 500 moon_data_processed.json
+              exit 1
+            fi
+            
+            echo "📝 First 200 characters:"
+            head -c 200 moon_data_processed.json
+            echo ""
+            echo "..."
+          else
+            echo "❌ Processed file not found"
+            ls -la *.json || echo "No JSON files"
+            exit 1
+          fi
+
+      - name: Upload processed result
+        uses: actions/upload-artifact@v4
+        with:
+          name: moon-data-processed-attempt1
+          path: |
+            moon_data.json
+            moon_data_processed.json
+          retention-days: 30
+
+      - name: Show final status
+        if: always()
+        run: |
+          echo "📋 Final status for attempt 1:"
           ls -la *.json || echo "No JSON files"
           if [ -f "moon_data_processed.json" ]; then
             echo "✅ Processing completed successfully!"
@@ -128,15 +217,23 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Make ChromeDriver executable and add to PATH
+      - name: Verify and setup ChromeDriver
         run: |
+          if [ ! -f "./matching_chrome_driver/chromedriver" ]; then
+            echo "❌ ChromeDriver not found at ./matching_chrome_driver/chromedriver"
+            exit 1
+          fi
           chmod +x ./matching_chrome_driver/chromedriver
-          echo "ChromeDriver version:"
+          echo "📋 ChromeDriver info:"
+          ls -la ./matching_chrome_driver/chromedriver
           ./matching_chrome_driver/chromedriver --version
           echo "✅ ChromeDriver configured and version verified"
 
       - name: Run and save parser output
+        env:
+          CHROMEDRIVER_PATH: "./matching_chrome_driver/chromedriver"
         run: |
+          echo "🚀 Starting parser (attempt 2) with ChromeDriver: $CHROMEDRIVER_PATH"
           python parse_data.py > moon_data.json
           echo "✅ Raw moon data collected in moon_data.json"
           ls -la moon_data.json
@@ -144,6 +241,10 @@ jobs:
       - name: Read JSON to env var
         id: json
         run: |
+          if ! python3 -c "import json; json.load(open('moon_data.json'))" 2>/dev/null; then
+            echo "❌ Invalid JSON in moon_data.json"
+            exit 1
+          fi
           CONTENT=$(cat moon_data.json | python3 -c 'import json,sys; print(json.dumps(json.load(sys.stdin)))')
           echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
           echo "✅ JSON data loaded into environment variable"
@@ -153,15 +254,22 @@ jobs:
           PA_USERNAME: ${{ secrets.PA_USERNAME }}
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ env.MOON_JSON }}
+          CHROMEDRIVER_PATH: "./matching_chrome_driver/chromedriver"
         run: |
-          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
+          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment (attempt 2)..."
           python bot_launcher.py
 
       - name: Verify processed file
         run: |
           if [ -f "moon_data_processed.json" ]; then
             echo "✅ The processed file was created successfully!"
-            echo "📊 File size: $(wc -c < moon_data_processed.json) byte"
+            echo "📊 File size: $(wc -c < moon_data_processed.json) bytes"
+            if python3 -c "import json; json.load(open('moon_data_processed.json'))" 2>/dev/null; then
+              echo "✅ JSON is valid"
+            else
+              echo "❌ Invalid JSON in processed file"
+              exit 1
+            fi
             echo "📝 First 200 characters:"
             head -c 200 moon_data_processed.json
             echo ""
@@ -175,7 +283,7 @@ jobs:
       - name: Upload processed result
         uses: actions/upload-artifact@v4
         with:
-          name: moon-data-processed
+          name: moon-data-processed-attempt2
           path: |
             moon_data.json
             moon_data_processed.json
@@ -184,7 +292,7 @@ jobs:
       - name: Show final status
         if: always()
         run: |
-          echo "📋 Final status:"
+          echo "📋 Final status for attempt 2:"
           ls -la *.json || echo "No JSON files"
           if [ -f "moon_data_processed.json" ]; then
             echo "✅ Processing completed successfully!"
@@ -214,15 +322,23 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Make ChromeDriver executable and add to PATH
+      - name: Verify and setup ChromeDriver
         run: |
+          if [ ! -f "./matching_chrome_driver/chromedriver" ]; then
+            echo "❌ ChromeDriver not found at ./matching_chrome_driver/chromedriver"
+            exit 1
+          fi
           chmod +x ./matching_chrome_driver/chromedriver
-          echo "ChromeDriver version:"
+          echo "📋 ChromeDriver info:"
+          ls -la ./matching_chrome_driver/chromedriver
           ./matching_chrome_driver/chromedriver --version
           echo "✅ ChromeDriver configured and version verified"
 
       - name: Run and save parser output
+        env:
+          CHROMEDRIVER_PATH: "./matching_chrome_driver/chromedriver"
         run: |
+          echo "🚀 Starting parser (final attempt) with ChromeDriver: $CHROMEDRIVER_PATH"
           python parse_data.py > moon_data.json
           echo "✅ Raw moon data collected in moon_data.json"
           ls -la moon_data.json
@@ -230,6 +346,10 @@ jobs:
       - name: Read JSON to env var
         id: json
         run: |
+          if ! python3 -c "import json; json.load(open('moon_data.json'))" 2>/dev/null; then
+            echo "❌ Invalid JSON in moon_data.json"
+            exit 1
+          fi
           CONTENT=$(cat moon_data.json | python3 -c 'import json,sys; print(json.dumps(json.load(sys.stdin)))')
           echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
           echo "✅ JSON data loaded into environment variable"
@@ -239,41 +359,17 @@ jobs:
           PA_USERNAME: ${{ secrets.PA_USERNAME }}
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ env.MOON_JSON }}
+          CHROMEDRIVER_PATH: "./matching_chrome_driver/chromedriver"
         run: |
-          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
+          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment (final attempt)..."
           python bot_launcher.py
 
       - name: Verify processed file
         run: |
           if [ -f "moon_data_processed.json" ]; then
             echo "✅ The processed file was created successfully!"
-            echo "📊 File size: $(wc -c < moon_data_processed.json) byte"
-            echo "📝 First 200 characters:"
-            head -c 200 moon_data_processed.json
-            echo ""
-            echo "..."
-          else
-            echo "❌ Processed file not found"
-            ls -la *.json || echo "No JSON files"
-            exit 1
-          fi
-
-      - name: Upload processed result
-        uses: actions/upload-artifact@v4
-        with:
-          name: moon-data-processed
-          path: |
-            moon_data.json
-            moon_data_processed.json
-          retention-days: 30
-
-      - name: Show final status
-        if: always()
-        run: |
-          echo "📋 Final status:"
-          ls -la *.json || echo "No JSON files"
-          if [ -f "moon_data_processed.json" ]; then
-            echo "✅ Processing completed successfully!"
-          else
-            echo "⚠️ The processed file was not created."
-          fi
+            echo "📊 File size: $(wc -c < moon_data_processed.json) bytes"
+            if python3 -c "import json; json.load(open('moon_data_processed.json'))" 2>/dev/null; then
+              echo "✅ JSON is valid"
+            else
+              echo "❌ Invalid JSON
