--- a/Dockerfile.parse_data
+++ b/Dockerfile.parse_data
@@ -1,20 +1,23 @@
 FROM python:3.10-slim
 
-ARG CHROMEDRIVER_PATH
-
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
+    unzip \
     && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
     && echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list \
     && apt-get update && apt-get install -y \
     google-chrome-stable \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ${CHROMEDRIVER_PATH} /usr/local/bin/chromedriver
-RUN chmod +x /usr/local/bin/chromedriver
+RUN wget -O /tmp/chromedriver.zip https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/139.0.7258.66/linux64/chromedriver-linux64.zip \
+    && unzip /tmp/chromedriver.zip -d /tmp/ \
+    && mv /tmp/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver \
+    && chmod +x /usr/local/bin/chromedriver \
+    && rm -rf /tmp/*
 
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
