--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -1,12 +1,12 @@
 name: Moon Data Parser and Processor (Dockerized)
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' 
-    - cron: '0 12 * * *'  
-    - cron: '0 15 * * *' 
-    
+    - cron: '0 0 * * *'
+    - cron: '0 12 * * *'
+    - cron: '0 15 * * *'
+
 jobs:
   parse-and-process:
     runs-on: ubuntu-latest
@@ -20,32 +20,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Prepare ChromeDriver
-        run: |
-          mkdir -p /usr/local/bin
-          cp matching_chrome_driver/chromedriver /usr/local/bin/
-          chmod +x /usr/local/bin/chromedriver
-          ln -sf /usr/local/bin/chromedriver /usr/bin/chromedriver
-          /usr/local/bin/chromedriver --version
-
-      - name: Verify Chrome and Driver versions
-        run: |
-          echo "Chrome version:"
-          docker run --rm $(docker build -q -f Dockerfile.parse_data .) google-chrome --version || echo "Chrome not found in parser"
-          echo "ChromeDriver version:" 
-          docker run --rm $(docker build -q -f Dockerfile.parse_data .) chromedriver --version || echo "Driver not found in parser"
-
       - name: Build and run parser container
         run: |
-          docker build -t moon-parser -f Dockerfile.parse_data \
-            --build-arg CHROMEDRIVER_PATH=matching_chrome_driver/chromedriver .
-          
+          docker build -t moon-parser -f Dockerfile.parse_data .
+
           mkdir -p artifacts
           docker run --rm \
             -v $(pwd)/artifacts:/app/output \
-            -v /usr/local/bin/chromedriver:/usr/local/bin/chromedriver \
             moon-parser > artifacts/moon_data.json
-          
+
           echo "✅ Raw moon data collected"
           ls -la artifacts/moon_data.json
 
@@ -62,15 +45,13 @@ jobs:
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ steps.prepare-json.outputs.content }}
         run: |
-          docker build -t moon-bot -f Dockerfile.bot_launcher \
-            --build-arg CHROMEDRIVER_PATH=matching_chrome_driver/chromedriver .
-          
+          docker build -t moon-bot -f Dockerfile.bot_launcher .
+
           docker run --rm \
             -e PA_USERNAME=$PA_USERNAME \
             -e PA_PASSWORD=$PA_PASSWORD \
             -e MOON_JSON="$MOON_JSON" \
             -v $(pwd)/artifacts:/app/output \
-            -v /usr/local/bin/chromedriver:/usr/local/bin/chromedriver \
             moon-bot
 
       - name: Verify processed file
@@ -102,7 +83,7 @@ jobs:
         run: |
           git config --global user.email "lunar-bot@github.com"
           git config --global user.name "Lunar Majesty Bot"
-          
+
           git add artifacts/*.json
           if git diff --cached --quiet; then
             echo "⚠️ No changes to commit"
