--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -10,12 +10,14 @@ name: Moon Data Parser and Processor
 
 # GA worker commits processed data to repo (triggering Pages rebuild daily)
 
+
 on:
   workflow_dispatch: 
   schedule:
     - cron: '0 0 * * *' 
     - cron: '0 12 * * *'  
     - cron: '0 15 * * *' 
+    - cron: '0 4 * * *' 
     
 jobs:
   parse-and-process: 
@@ -33,22 +35,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Build Docker image for selenium scripts
+      - name: Run and save parser output
         run: |
-          docker build --no-cache -t lunar-selenium .
-          
-      - name: Verify Chrome and ChromeDriver versions
-        run: |
-          echo "🔍 Checking Chrome and ChromeDriver versions..."
-          docker run --rm lunar-selenium /opt/chrome/chrome --version
-          docker run --rm lunar-selenium chromedriver --version
-          
-      - name: Run and save parser output (Docker)
-        run: |
-          echo "🐍 Testing Python in container..."
-          docker run --rm lunar-selenium /usr/local/bin/python --version
-          echo "🚀 Running parser..."
-          docker run --rm --memory=2g --cpus=1 -v ${{ github.workspace }}:/app lunar-selenium /usr/local/bin/python parse_data.py > moon_data.json
+          python parse_data.py > moon_data.json
           echo "✅ Raw moon data collected in moon_data.json"
           ls -la moon_data.json
 
@@ -59,14 +48,14 @@ jobs:
           echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
           echo "✅ JSON data loaded into environment variable"
 
-      - name: Launch bot with Selenium (Docker)
+      - name: Launch bot with Selenium
         env:
           PA_USERNAME: ${{ secrets.PA_USERNAME }}
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ env.MOON_JSON }}
         run: |
           echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
-          docker run --rm --memory=2g --cpus=1 -e PA_USERNAME -e PA_PASSWORD -e MOON_JSON -v ${{ github.workspace }}:/app lunar-selenium /usr/local/bin/python bot_launcher.py
+          python bot_launcher.py
 
       - name: Verify processed file
         run: |
@@ -102,3 +91,4 @@ jobs:
           else
             echo "⚠️ The processed file was not created."
           fi
+
