--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -14,10 +14,7 @@ name: Moon Data Parser and Processor
 on:
   workflow_dispatch: 
   schedule:
-    - cron: '0 0 * * *' 
-    - cron: '0 12 * * *'  
-    - cron: '0 15 * * *' 
-    - cron: '0 4 * * *' 
+    - cron: "0 */2 * * *"
     
 jobs:
   parse-and-process: 
